@@ -1,7 +1,7 @@
 --- 
 format: 1
 handler: 
-  commit: b161d7fcd06a93938c748b66ad524f3a29c60b3c
+  commit: 15cea326c10896bdce3bc640d59099640f129a7a
   branch: HEAD
 lock: false
 repository_url: git://github.com/pivotal/js-test-core.git
