@@ -6,6 +6,9 @@ module JsTestCore
       route 'firefox' do |env, name|
         FirefoxRunner.new(env)
       end
+      route 'iexplore' do |env, name|
+        IExploreRunner.new(env)
+      end
     end
   end
 end
